# stock-prediction-app

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  stock_prediction_app.spec
app/models/: model.keras
app/utils/: constants.py  utils.py
app/widgets/: plot_widget.py
app/windows/: main_window.py
resources/: model.keras
