[project]
name = "stock-prediction-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Chernov",email = "chernovvova2023@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6 (>=6.10.0,<7.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "keras (>=3.12.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
